changed copyright from id to class

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
         </form>
     </div>
     <footer>
-        <span id="copyright">Copy right ©</span>
+        <span class="copyright">Copy right ©</span>
     </footer>
 </body>
 
