--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </article>  
     </div>
     <footer>
-        <span id="copyright">Copy right ©</span>
+        <span class="copyright">Copy right ©</span>
     </footer>
 </body>
 
