--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
     </div>
 
     <footer>
-        <span id="copyright">Copy right ©</span>
+        <span class="copyright">Copy right ©</span>
     </footer>
 </body>
 
