changed about_section id and contact_section id to .main_section also fixed in css

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         </nav>
     </div>
 
-    <div id="contact_section">
+    <div class="main_section">
         <div class="section_title">
             <p id=title>Contact</p>
         </div>
