--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
     </div>
 
-    <div id="about_section">
+    <div class="main_section">
         <div class="section_title">
             <p id=title>About</p>
         </div>
