changed portfolio_section to .main_section also fixed naming in css

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         </nav>
 
     </div>
-    <div class="portfolio_section">
+    <div class="main_section">
         <div class="section_title">
             <p id=title>Portfolio</p>
         </div>
