added media query, put img in div class=rows

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,10 +30,14 @@
         </div>
         <hr width="95%">
         <div id="image_grid">
-            <img class="portfolio_img" src="assets/images/1498111426849.jpg" alt="img1">
-            <img class="portfolio_img" src="assets/images/IMAG3879.jpg" alt="img2">
-            <img class="portfolio_img" src="assets/images/IMAG4069.jpg" alt="img3">
-            <img class="portfolio_img" src="assets/images/IMAG3811.jpg" alt="img3">
+            <div class="img_row">
+                <img class="portfolio_img" src="assets/images/1498111426849.jpg" alt="img1">
+                <img class="portfolio_img" src="assets/images/IMAG3879.jpg" alt="img2">
+            </div>
+            <div class="img_row">
+                <img class="portfolio_img" src="assets/images/IMAG4069.jpg" alt="img3">
+                <img class="portfolio_img" src="assets/images/IMAG3811.jpg" alt="img3">
+            </div>
         </div>
     </div>
 
