finally allow image grid to center in main_section

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,12 +31,20 @@
         <hr width="95%">
         <div id="image_grid">
             <div class="img_row">
-                <img class="portfolio_img" src="assets/images/1498111426849.jpg" alt="img1">
-                <img class="portfolio_img" src="assets/images/IMAG3879.jpg" alt="img2">
+                <div class="img_column">
+                    <img class="portfolio_img" src="assets/images/1498111426849.jpg" alt="img1">
+                </div>
+                <div class="img_column">
+                    <img class="portfolio_img" src="assets/images/IMAG3879.jpg" alt="img2">
+                </div>
             </div>
             <div class="img_row">
-                <img class="portfolio_img" src="assets/images/IMAG4069.jpg" alt="img3">
-                <img class="portfolio_img" src="assets/images/IMAG3811.jpg" alt="img3">
+                <div class="img_column">
+                    <img class="portfolio_img" src="assets/images/IMAG4069.jpg" alt="img3">
+                </div>
+                <div class="img_column">
+                    <img class="portfolio_img" src="assets/images/IMAG3811.jpg" alt="img3">
+                </div> 
             </div>
         </div>
     </div>
