commented out nav a hover properties to fix flashing nav links when viewport at 640px

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!-- <div class="navbar"> -->
+    <div class="navbar">
         <header>
             Annie Cheng
         </header>
